src/objects/LeanData__Routing_Metric__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>LeanData__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeanData__Metric_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metric Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Routing Deployments</relationshipLabel>
        <relationshipName>Routing_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_ROI__c</fullName>
        <description>Keeping total count of number of objects get routed on Inserts</description>
        <label>Total ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_ROU__c</fullName>
        <description>Keeping total count of number of objects get routed on Updates</description>
        <label>Total ROU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <label>Routing Metric</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>